# convoflow

./: .env.example  .gitignore  README.md  docker-compose.yml  print_env.py  pyproject.toml
convoflow/ai/: ai_interface.py
convoflow/core/: cli_runner.py  runner.py
convoflow/data/: graph_store.py
convoflow/db/: metrics.py  schema.sql
convoflow/io/: voice_input.py  voice_output.py
examples/: dev_cli_example.py  example.py
scripts/: check_db_connections.py  initialize_db.py  visualize_graph.py
